PWGPP-543: bokehDrawSA_2.py working with two graphes

--- a/tutorial/bokehDraw/test_BokehClient.ipynb
+++ b/tutorial/bokehDraw/test_BokehClient.ipynb
@@ -19,6 +19,7 @@
     "from bokeh.plotting import figure\n",
     "from bokeh.layouts import column, row\n",
     "from bokeh.models import CustomJS, ColumnDataSource, Slider\n",
+    "from RootInteractive.InteractiveDrawing.bokeh.bokehTools import *\n",
     "from RootInteractive.InteractiveDrawing.bokeh.bokehDraw import *\n",
     "output_notebook()\n"
    ]
@@ -168,94 +169,6 @@
     "    \n",
     "figure=test_FigureArray() "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#from bokeh.layouts import column\n",
-    "#from bokeh.models import CustomJS, ColumnDataSource, Slider\n",
-    "#from bokeh.plotting import figure, output_file, show\n",
-    "def makeJScallback2(widgetDict):\n",
-    "    #display(widgetDict[\"cdsOrig\"])\n",
-    "    code=\"\"\"  \n",
-    "        var origData = cdsOrig.data;\n",
-    "        var selData = cdsSel.data;\n",
-    "        var length=origData['A'].length\n",
-    "        console.log(\"Pos.: %f\\t%f\",slider0.value,slider1.value,sliderRange.value);\n",
-    "        console.log(\"Length: %f\",origData['A'].length,selData[\"A\"].length)\n",
-    "        console.log(\"El0: %f\",origData['A'][0])\n",
-    "        for (var i = 0; i < length; i++) {\n",
-    "            console.log(\"%f\\t%f\",origData['A'][i], selData['A'][i],)\n",
-    "        }\n",
-    "        \"\"\"\n",
-    "    \n",
-    "    callback = CustomJS(args=widgetDict, code=code)\n",
-    "    display(callback)\n",
-    "    return callback\n",
-    "\n",
-    " # 1.) create figures\n",
-    "figureArray = [\n",
-    "        [['A'], ['D+A','C-A'], {\"size\": 8}],\n",
-    "        [['A'], ['C+A', 'C-A']],\n",
-    "        [['A'], ['sin(A/10)', 'sin(A/20)*0.5', 'sin(A/40)*0.25'], {\"size\": 10}],\n",
-    "]\n",
-    "figureLayout: str = '((0,1, plot_height=200),(2, x_visible=1),commonX=1,x_visible=1,y_visible=0,plot_height=150,plot_width=800)'\n",
-    "tooltips = [(\"VarA\", \"(@A)\"), (\"VarB\", \"(@B)\"), (\"VarC\", \"(@C)\"), (\"VarD\", \"(@D)\")]\n",
-    "dummy,source,figureList  = bokehDrawArray(df, \"A>0\", figureArray, layout=figureLayout, color=\"blue\", size=4, tooltips=tooltips)\n",
-    "# \n",
-    "cdsOrig=source\n",
-    "cdsSel=source\n",
-    "slider0 = Slider(start=0.1, end=4, value=1, step=.1, title=\"slider0\")\n",
-    "slider1 = Slider(start=0.1, end=4, value=1, step=.1, title=\"slider1\")\n",
-    "sliderRange= RangeSlider(start=0.1, end=4, value=(0.1,4) , step=0.1, title=\"Range\")\n",
-    "myDict={\"cdsOrig\":cdsOrig, \"cdsSel\":cdsSel, \"slider0\":slider0, \"slider1\":slider1, \"sliderRange\":sliderRange}\n",
-    "\n",
-    "\n",
-    "callback=makeJScallback2(myDict)\n",
-    "#callback=makeJScallback(myDict) - callback form previous map OK\n",
-    "\n",
-    "slider0.js_on_change('value', callback)\n",
-    "slider1.js_on_change('value', callback)\n",
-    "sliderRange.js_on_change('value', callback)\n",
-    "layout = column(column(slider0,slider1,sliderRange),dummy)\n",
-    "\n",
-    "show(layout)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "source"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cdsOrig.data[\"index\"].size"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -274,7 +187,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
