--- a/tutorial/bokehDraw/bokehTreeDrawSA.ipynb
+++ b/tutorial/bokehDraw/bokehTreeDrawSA.ipynb
@@ -26,7 +26,7 @@
     "from Tools.aliTreePlayer import *\n",
     "from TTreeHnInteractive.TTreeHnBrowser import *\n",
     "from InteractiveDrawing.bokeh.bokehTools import *\n",
-    "from InteractiveDrawing.bokeh.bokehDrawSA import *\n",
+    "from InteractiveDrawing.bokeh.bokehDrawSA_2 import *\n",
     "output_notebook()\n",
     "p3 = figure(plot_width=700, plot_height=400, title=\"template\")"
    ]
@@ -91,11 +91,12 @@
    "source": [
     "bokehDrawSA.verbosity=0\n",
     "variables=\"pileUp:tailF:commonF:typeF:fraction:norm:slope:isMax:MB:P0:P1:PA\"\n",
+    "output_file(\"test2.html\")\n",
     "tooltips=[('Is maximum','@isMax'),(\"Pad type\",\"@typeF\")]\n",
     "p3 = figure(plot_width=700, plot_height=400, title=\"template\")\n",
     "#widgets=\"accordion.first(slider.P0(0,1,0.5,0,1),slider.commonF(0,15,5,0,5)),accordion.second(dropdown.MB(0,0.5,1)),accordion.second(checkbox.isMax(False)),slider.typeF(0,4,1,0)\"\n",
-    "widgets=\"slider.P0(0,1,0.5,0,1),slider.commonF(0,15,5,0,5),dropdown.MB(0,0.5,1),slider.typeF(0,4,1,0)\"\n",
-    "\n",
+    "#widgets=\"slider.P0(0,1,0.5,0,1),slider.commonF(0,15,5,0,5),dropdown.MB(0,0.5,1),slider.typeF(0,4,1,0)\"\n",
+    "widgets=\"slider.P0(0,1,0.5,0,1),slider.commonF(0,15,5,0,5),slider.typeF(0,4,1,0)\"\n",
     "#xxx=bokehDraw(tree,\"tailF>-1\",\"tailF\",\"slope\",\"fraction\",slider,p3,commonX=1,size=8,ncols=1,nEntries=100000000,tooltips=tooltips,variables=variables)\n",
     "xxx=bokehDrawSA(tree,\"tailF>=-1\",\"tailF\",\"slope\",\"fraction\",widgets,p3,commonX=1,size=8,ncols=1,nEntries=100000000,tooltips=tooltips)"
    ]
