--- a/tutorial/bokehDraw/test_BokehClient.ipynb
+++ b/tutorial/bokehDraw/test_BokehClient.ipynb
@@ -5,7 +5,8 @@
    "metadata": {},
    "source": [
     "# Test macro for Bokeh client visualization\n",
-    "* it is aimed to be used for develoopers to test feature of bokeh interactive  - standalone plotting"
+    "* NOT FOR STANDARD USERS\n",
+    "* This notebook to be used for developpers to test feature of bokeh interactive  - standalone plotting"
    ]
   },
   {
@@ -43,45 +44,77 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bokehDrawArray?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "figureArray = [\n",
-    "        [['A'], ['D+A','C-A'], {\"size\": 1}],\n",
-    "        [['A'], ['C+A', 'C-A']],\n",
-    "        [['A'], ['Category']],\n",
-    "    ]\n",
-    "figureLayout: str = '((0,1),(2, x_visible=1),commonX=1,x_visible=1,y_visible=0,plot_height=250,plot_width=1000)'\n",
-    "tooltips = [(\"VarA\", \"(@A)\"), (\"VarB\", \"(@B)\"), (\"VarC\", \"(@C)\"), (\"VarD\", \"(@D)\")]\n",
-    "pAll,layoutList,source =bokehDrawArray(df, \"A>0\", figureArray, layout=figureLayout, color=\"blue\", size=4, tooltips=tooltips)\n",
-    "show(pAll)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "logging.disable(1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "output_file(\"test2.html\")\n",
-    "def makeJScallback(widgetDict):\n",
+    "output_file(\"testInteractive0.html\")\n",
+    "\n",
+    "def test_FigureArray():\n",
+    "    \"\"\"\n",
+    "    Test of the bokehDrawArray to draw figure array -\n",
+    "    :return:\n",
+    "    \"\"\"\n",
+    "    # 1.) create figures\n",
+    "    figureArray = [\n",
+    "        [['A'], ['D+A','C-A'], {\"size\": 8}],\n",
+    "        [['A'], ['C+A', 'C-A']],\n",
+    "        [['A'], ['sin(A/10)', 'sin(A/20)*0.5', 'sin(A/40)*0.25'], {\"size\": 10}]\n",
+    "    ]\n",
+    "    figureLayout: str = '((0,1, plot_height=200),(2, x_visible=1),commonX=1,x_visible=1,y_visible=0,plot_height=150,plot_width=1000)'\n",
+    "    tooltips = [(\"VarA\", \"(@A)\"), (\"VarB\", \"(@B)\"), (\"VarC\", \"(@C)\"), (\"VarD\", \"(@D)\")]\n",
+    "    dummy,source,figureList,df2  = bokehDrawArray(df, \"A>0\", figureArray, layout=figureLayout, color=\"blue\", size=4, tooltips=tooltips)\n",
+    "\n",
+    "    # 2.) make CDS\n",
+    "    cdsOrig = ColumnDataSource(df.query(\"A>0\"))\n",
+    "    cdsSel =  source\n",
+    "    widgetDict={\"cdsOrig\":cdsOrig, \"cdsSel\":cdsSel}\n",
+    "    sliders=[]\n",
+    "    # 3.) create sliders \n",
+    "    for a in df.columns:\n",
+    "        length=df[a].max()-df[a].min()\n",
+    "        sliderRange= RangeSlider(start=df[a].min(), end=df[a].max(), value=(df[a].min(), df[a].max()), step=length*0.01, title=a+\"Range\")\n",
+    "        sliders.append([sliderRange])\n",
+    "        widgetDict[a+\"Range\"]=sliderRange\n",
+    "    # make callback\n",
+    "    mycallback=makeJScallback(widgetDict)\n",
+    "    display(mycallback)\n",
+    "    for a in sliders:\n",
+    "        figureList.append(a)\n",
+    "        a[0].js_on_event('value',mycallback)\n",
+    "        a[0].js_on_change('value',mycallback)\n",
+    "        \n",
+    "    sliderRange2= RangeSlider(start=0.1, end=4, value=(0.1,4) , step=0.1, title=\"Range2\")\n",
+    "    sliderRange2.js_on_change('value', mycallback)\n",
+    "    figureList.append([sliderRange2])\n",
+    "    pAll=    gridplotRow(figureList)\n",
+    "    show(pAll)\n",
+    "    return pAll\n",
+    "    #print(widgetDict)\n",
+    "    \n",
+    "figure=test_FigureArray() "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## This is backup version of JScalback function\n",
+    "Original version in bokehTools"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def makeJScallbackbackup(widgetDict):\n",
     "    size=widgetDict['cdsOrig'].data[\"index\"].size\n",
     "    code=\\\n",
     "    \"\"\"\n",
@@ -121,141 +154,8 @@
     "    callback = CustomJS(args=widgetDict, code=code)\n",
     "    #print(callback)\n",
     "    #display(widgetDict)\n",
-    "    return callback\n",
-    "\n",
-    "def test_FigureArray():\n",
-    "    \"\"\"\n",
-    "    Test of the bokehDrawArray to draw figure array -\n",
-    "    :return:\n",
-    "    \"\"\"\n",
-    "    # 1.) create figures\n",
-    "    figureArray = [\n",
-    "        [['A'], ['D+A','C-A'], {\"size\": 8}],\n",
-    "        [['A'], ['C+A', 'C-A']],\n",
-    "        [['A'], ['sin(A/10)', 'sin(A/20)*0.5', 'sin(A/40)*0.25'], {\"size\": 10}]\n",
-    "    ]\n",
-    "    figureLayout: str = '((0,1, plot_height=200),(2, x_visible=1),commonX=1,x_visible=1,y_visible=0,plot_height=150,plot_width=1000)'\n",
-    "    tooltips = [(\"VarA\", \"(@A)\"), (\"VarB\", \"(@B)\"), (\"VarC\", \"(@C)\"), (\"VarD\", \"(@D)\")]\n",
-    "    #dummy,source,figureList  = bokehDrawArray(df, \"A>0\", figureArray, layout=figureLayout, color=\"blue\", size=4, tooltips=tooltips)\n",
-    "    dummy,source,figureList  = bokehDrawArray(df, \"A>0\", figureArray, layout=figureLayout, color=\"blue\", size=4, tooltips=tooltips)\n",
-    "\n",
-    "    # 2.) make CDS\n",
-    "    cdsOrig = ColumnDataSource(df.query(\"A>0\"))\n",
-    "    cdsSel =  source\n",
-    "    widgetDict={\"cdsOrig\":cdsOrig, \"cdsSel\":cdsSel}\n",
-    "    sliders=[]\n",
-    "    # 3.) create sliders \n",
-    "    for a in df.columns:\n",
-    "        length=df[a].max()-df[a].min()\n",
-    "        sliderRange= RangeSlider(start=df[a].min(), end=df[a].max(), value=(df[a].min(), df[a].max()), step=length*0.01, title=a+\"Range\")\n",
-    "        sliders.append([sliderRange])\n",
-    "        widgetDict[a+\"Range\"]=sliderRange\n",
-    "    # make callback\n",
-    "    mycallback=makeJScallback(widgetDict)\n",
-    "    display(mycallback)\n",
-    "    for a in sliders:\n",
-    "        figureList.append(a)\n",
-    "        a[0].js_on_event('value',mycallback)\n",
-    "        a[0].js_on_change('value',mycallback)\n",
-    "        \n",
-    "    sliderRange2= RangeSlider(start=0.1, end=4, value=(0.1,4) , step=0.1, title=\"Range2\")\n",
-    "    sliderRange2.js_on_change('value', mycallback)\n",
-    "    figureList.append([sliderRange2])\n",
-    "    pAll=    gridplotRow(figureList)\n",
-    "    show(pAll)\n",
-    "    return pAll\n",
-    "    #print(widgetDict)\n",
-    "    \n",
-    "figure=test_FigureArray() "
+    "    return callback\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#from bokeh.layouts import column\n",
-    "#from bokeh.models import CustomJS, ColumnDataSource, Slider\n",
-    "#from bokeh.plotting import figure, output_file, show\n",
-    "def makeJScallback2(widgetDict):\n",
-    "    #display(widgetDict[\"cdsOrig\"])\n",
-    "    code=\"\"\"  \n",
-    "        var origData = cdsOrig.data;\n",
-    "        var selData = cdsSel.data;\n",
-    "        var length=origData['A'].length\n",
-    "        console.log(\"Pos.: %f\\t%f\",slider0.value,slider1.value,sliderRange.value);\n",
-    "        console.log(\"Length: %f\",origData['A'].length,selData[\"A\"].length)\n",
-    "        console.log(\"El0: %f\",origData['A'][0])\n",
-    "        for (var i = 0; i < length; i++) {\n",
-    "            console.log(\"%f\\t%f\",origData['A'][i], selData['A'][i],)\n",
-    "        }\n",
-    "        \"\"\"\n",
-    "    \n",
-    "    callback = CustomJS(args=widgetDict, code=code)\n",
-    "    display(callback)\n",
-    "    return callback\n",
-    "\n",
-    " # 1.) create figures\n",
-    "figureArray = [\n",
-    "        [['A'], ['D+A','C-A'], {\"size\": 8}],\n",
-    "        [['A'], ['C+A', 'C-A']],\n",
-    "        [['A'], ['sin(A/10)', 'sin(A/20)*0.5', 'sin(A/40)*0.25'], {\"size\": 10}],\n",
-    "]\n",
-    "figureLayout: str = '((0,1, plot_height=200),(2, x_visible=1),commonX=1,x_visible=1,y_visible=0,plot_height=150,plot_width=800)'\n",
-    "tooltips = [(\"VarA\", \"(@A)\"), (\"VarB\", \"(@B)\"), (\"VarC\", \"(@C)\"), (\"VarD\", \"(@D)\")]\n",
-    "dummy,source,figureList  = bokehDrawArray(df, \"A>0\", figureArray, layout=figureLayout, color=\"blue\", size=4, tooltips=tooltips)\n",
-    "# \n",
-    "cdsOrig=source\n",
-    "cdsSel=source\n",
-    "slider0 = Slider(start=0.1, end=4, value=1, step=.1, title=\"slider0\")\n",
-    "slider1 = Slider(start=0.1, end=4, value=1, step=.1, title=\"slider1\")\n",
-    "sliderRange= RangeSlider(start=0.1, end=4, value=(0.1,4) , step=0.1, title=\"Range\")\n",
-    "myDict={\"cdsOrig\":cdsOrig, \"cdsSel\":cdsSel, \"slider0\":slider0, \"slider1\":slider1, \"sliderRange\":sliderRange}\n",
-    "\n",
-    "\n",
-    "callback=makeJScallback2(myDict)\n",
-    "#callback=makeJScallback(myDict) - callback form previous map OK\n",
-    "\n",
-    "slider0.js_on_change('value', callback)\n",
-    "slider1.js_on_change('value', callback)\n",
-    "sliderRange.js_on_change('value', callback)\n",
-    "layout = column(column(slider0,slider1,sliderRange),dummy)\n",
-    "\n",
-    "show(layout)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "source"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cdsOrig.data[\"index\"].size"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
