--- a/tutorial/bokehDraw/test_BokehClient.ipynb
+++ b/tutorial/bokehDraw/test_BokehClient.ipynb
@@ -20,7 +20,7 @@
     "from bokeh.plotting import figure\n",
     "from bokeh.layouts import column, row\n",
     "from bokeh.models import CustomJS, ColumnDataSource, Slider\n",
-   "from RootInteractive.InteractiveDrawing.bokeh.bokehTools import *\n",
+    "from RootInteractive.InteractiveDrawing.bokeh.bokehTools import *\n",
     "from RootInteractive.InteractiveDrawing.bokeh.bokehDraw import *\n",
     "output_notebook()\n"
    ]
@@ -45,23 +45,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bokehDrawArray?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "figureArray = [\n",
-    "        [['A'], ['D+A','C-A'], {\"size\": 1}],\n",
-    "        [['A'], ['C+A', 'C-A']],\n",
-    "        [['A'], ['Category']],\n",
-    "    ]\n",
-    "figureLayout: str = '((0,1),(2, x_visible=1),commonX=1,x_visible=1,y_visible=0,plot_height=250,plot_width=1000)'\n",
+    "    [['A'], ['C-A'], {\"color\": \"red\", \"size\": 7, \"colorZvar\":\"C\"}],\n",
+    "    [['A'], ['C+A', 'C-A']],\n",
+    "    [['B'], ['C+B', 'C-B'],{\"color\": \"red\", \"size\": 7, \"colorZvar\":\"C\"}],\n",
+    "    [['D'], ['sin(D/10)', 'sin(D/20)*0.5', 'sin(D/40)*0.25'], {\"size\": 10}],\n",
+    "    ['table']\n",
+    "]\n",
+    "\n",
+    "figureLayout: str = '((0,1,2),(3, x_visible=1),commonX=1,x_visible=1,y_visible=0,plot_height=250,plot_width=1000)'\n",
     "tooltips = [(\"VarA\", \"(@A)\"), (\"VarB\", \"(@B)\"), (\"VarC\", \"(@C)\"), (\"VarD\", \"(@D)\")]\n",
-    "pAll,layoutList,source =bokehDrawArray(df, \"A>0\", figureArray, layout=figureLayout, color=\"blue\", size=4, tooltips=tooltips)\n",
+    "pAll,layoutList,source,data  =bokehDrawArray(df, \"A>0\", figureArray, layout=figureLayout, color=\"blue\", size=4, tooltips=tooltips)\n",
     "show(pAll)"
    ]
   },
@@ -77,53 +71,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "output_file(\"test2.html\")\n",
-    "def makeJScallback(widgetDict):\n",
-    "    size=widgetDict['cdsOrig'].data[\"index\"].size\n",
-    "    code=\\\n",
-    "    \"\"\"\n",
-    "    var dataOrig = cdsOrig.data;\n",
-    "    var dataSel = cdsSel.data;\n",
-    "    console.log('%f\\t%f\\t',dataOrig[\"A\"].length, dataSel[\"A\"].length);\n",
-    "    \"\"\"\n",
-    "    for a in widgetDict['cdsOrig'].data:\n",
-    "        code+=f\"dataSel[\\'{a}\\']=[];\\n\"\n",
-    "    code+=f\"\"\"var arraySize={size};\\n\"\"\"\n",
-    "    code+=\"\"\"var nSelected=0;\\n\"\"\"\n",
-    "    code+=f\"\"\"for (var i = 0; i < {size}; i++)\\n\"\"\"\n",
-    "    code+=\" {\\n\"\n",
-    "    code+=\"\"\"var isSelected=1;\\n\"\"\"\n",
-    "    for key, value in widgetDict.items():\n",
-    "        if type(value).__name__ == \"RangeSlider\":\n",
-    "            dataName=key.replace(\"Range\",\"\")\n",
-    "            code+=f\"      var {key}Value={key}.value;\\n\"\n",
-    "            code+=f\"      console.log(\\\"%s\\t%f\\t%f\\t%f\\\",\\\"{key}\\\",{key}Value[0],{key}Value[1],dataOrig[\\\"{dataName}\\\"][i]);\\n\"\n",
-    "            code+=f\"      isSelected&=(dataOrig[\\\"{dataName}\\\"][i]>={key}Value[0])\\n\"\n",
-    "            code+=f\"      isSelected&=(dataOrig[\\\"{dataName}\\\"][i]<={key}Value[1])\\n\"\n",
-    "            #print(value)\n",
-    "    code+=\"\"\"      \n",
-    "        console.log(\\\"isSelected:%d\\t%d\\\",i,isSelected);\n",
-    "        if (isSelected) nSelected++;\n",
-    "        if (isSelected){\n",
-    "    \"\"\"\n",
-    "    for a in widgetDict['cdsOrig'].data:\n",
-    "        code+=f\"dataSel[\\'{a}\\'].push(dataOrig[\\'{a}\\'][i]);\\n\"\n",
-    "    code+=\"\"\"\n",
-    "        }\n",
-    "    }\n",
-    "    console.log(\\\"nSelected:%d\\\",nSelected); \n",
-    "    cdsSel.change.emit();\n",
-    "    \"\"\"\n",
-    "    print(code)\n",
-    "    callback = CustomJS(args=widgetDict, code=code)\n",
-    "    #print(callback)\n",
-    "    #display(widgetDict)\n",
-    "    return callback\n",
     "\n",
     "def test_FigureArray():\n",
     "    \"\"\"\n",
@@ -131,15 +82,10 @@
     "    :return:\n",
     "    \"\"\"\n",
     "    # 1.) create figures\n",
-    "    figureArray = [\n",
-    "        [['A'], ['D+A','C-A'], {\"size\": 8}],\n",
-    "        [['A'], ['C+A', 'C-A']],\n",
-    "        [['A'], ['sin(A/10)', 'sin(A/20)*0.5', 'sin(A/40)*0.25'], {\"size\": 10}]\n",
-    "    ]\n",
-    "    figureLayout: str = '((0,1, plot_height=200),(2, x_visible=1),commonX=1,x_visible=1,y_visible=0,plot_height=150,plot_width=1000)'\n",
+    "    figureLayout: str = '((0,1,2, plot_height=200),(3, x_visible=1),commonX=1,x_visible=1,y_visible=0,plot_height=150,plot_width=1000)'\n",
     "    tooltips = [(\"VarA\", \"(@A)\"), (\"VarB\", \"(@B)\"), (\"VarC\", \"(@C)\"), (\"VarD\", \"(@D)\")]\n",
     "    #dummy,source,figureList  = bokehDrawArray(df, \"A>0\", figureArray, layout=figureLayout, color=\"blue\", size=4, tooltips=tooltips)\n",
-    "    dummy,source,figureList  = bokehDrawArray(df, \"A>0\", figureArray, layout=figureLayout, color=\"blue\", size=4, tooltips=tooltips)\n",
+    "    dummy,source,figureList,data  = bokehDrawArray(df, \"A>0\", figureArray, layout=figureLayout, color=\"blue\", size=4, tooltips=tooltips)\n",
     "\n",
     "    # 2.) make CDS\n",
     "    cdsOrig = ColumnDataSource(df.query(\"A>0\"))\n",
@@ -169,63 +115,6 @@
     "    #print(widgetDict)\n",
     "    \n",
     "figure=test_FigureArray() "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## This is backup version of JScalback function\n",
-    "Original version in bokehTools"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def makeJScallbackbackup(widgetDict):\n",
-    "    size=widgetDict['cdsOrig'].data[\"index\"].size\n",
-    "    code=\\\n",
-    "    \"\"\"\n",
-    "    var dataOrig = cdsOrig.data;\n",
-    "    var dataSel = cdsSel.data;\n",
-    "    console.log('%f\\t%f\\t',dataOrig[\"A\"].length, dataSel[\"A\"].length);\n",
-    "    \"\"\"\n",
-    "    for a in widgetDict['cdsOrig'].data:\n",
-    "        code+=f\"dataSel[\\'{a}\\']=[];\\n\"\n",
-    "    code+=f\"\"\"var arraySize={size};\\n\"\"\"\n",
-    "    code+=\"\"\"var nSelected=0;\\n\"\"\"\n",
-    "    code+=f\"\"\"for (var i = 0; i < {size}; i++)\\n\"\"\"\n",
-    "    code+=\" {\\n\"\n",
-    "    code+=\"\"\"var isSelected=1;\\n\"\"\"\n",
-    "    for key, value in widgetDict.items():\n",
-    "        if type(value).__name__ == \"RangeSlider\":\n",
-    "            dataName=key.replace(\"Range\",\"\")\n",
-    "            code+=f\"      var {key}Value={key}.value;\\n\"\n",
-    "            code+=f\"      console.log(\\\"%s\\t%f\\t%f\\t%f\\\",\\\"{key}\\\",{key}Value[0],{key}Value[1],dataOrig[\\\"{dataName}\\\"][i]);\\n\"\n",
-    "            code+=f\"      isSelected&=(dataOrig[\\\"{dataName}\\\"][i]>={key}Value[0])\\n\"\n",
-    "            code+=f\"      isSelected&=(dataOrig[\\\"{dataName}\\\"][i]<={key}Value[1])\\n\"\n",
-    "            #print(value)\n",
-    "    code+=\"\"\"      \n",
-    "        console.log(\\\"isSelected:%d\\t%d\\\",i,isSelected);\n",
-    "        if (isSelected) nSelected++;\n",
-    "        if (isSelected){\n",
-    "    \"\"\"\n",
-    "    for a in widgetDict['cdsOrig'].data:\n",
-    "        code+=f\"dataSel[\\'{a}\\'].push(dataOrig[\\'{a}\\'][i]);\\n\"\n",
-    "    code+=\"\"\"\n",
-    "        }\n",
-    "    }\n",
-    "    console.log(\\\"nSelected:%d\\\",nSelected); \n",
-    "    cdsSel.change.emit();\n",
-    "    \"\"\"\n",
-    "    print(code)\n",
-    "    callback = CustomJS(args=widgetDict, code=code)\n",
-    "    #print(callback)\n",
-    "    #display(widgetDict)\n",
-    "    return callback\n"
    ]
   }
  ],
