--- a/tutorial/bokehDraw/bokehTreeDrawSA.ipynb
+++ b/tutorial/bokehDraw/bokehTreeDrawSA.ipynb
@@ -26,7 +26,7 @@
     "from Tools.aliTreePlayer import *\n",
     "from TTreeHnInteractive.TTreeHnBrowser import *\n",
     "from InteractiveDrawing.bokeh.bokehTools import *\n",
-    "from InteractiveDrawing.bokeh.bokehDrawSA_2 import *\n",
+    "from InteractiveDrawing.bokeh.bokehDrawSA import *\n",
     "output_notebook()\n",
     "p3 = figure(plot_width=700, plot_height=400, title=\"template\")"
    ]
@@ -140,7 +140,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
