standAlone.ipynb is fixed

--- a/tutorial/bokehDraw/standAlone.ipynb
+++ b/tutorial/bokehDraw/standAlone.ipynb
@@ -84,16 +84,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "output_file(\"test2.html\")\n",
     "\n",
-    "    #print(widgetDict)\n",
+    "widgets=\"slider.A(0,100,0.5,10,90),slider.B(0,100,0.5,10,90),slider.C(0,100,0.5,10,90),slider.D(0,100,0.5,10,90)\"\n",
     "    \n",
-    "figure=test_FigureArray(df,\"A>0\",figureArray, layout=figureLayout, color=\"blue\", size=4, tooltips=tooltips)"
+    "figure=bokehDrawSA.fromArray(df,\"A>0\",figureArray, widgets, layout=figureLayout, color=\"blue\", size=4, tooltips=tooltips)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bokehDrawSA.initWidgets?"
    ]
   }
  ],
