--- a/tutorial/Index.ipynb
+++ b/tutorial/Index.ipynb
@@ -13,17 +13,20 @@
    "metadata": {},
    "source": [
     "Currently runing examples:\n",
-    "1. [bokehTreeDraw](bokehDraw/bokehTreeDraw.ipynb)\n",
-    "2. [bokehHistoDraw](bokehDraw/THnInteractive.ipynb)\n",
-    "3. [bokehHistoDraw(R_Phi_Z_pT)](bokehDraw/THnVisualization.ipynb)\n",
+    "1. An example to draw ROOT:TTree using bokeh: [bokehTreeDraw](bokehDraw/bokehTreeDraw.ipynb)\n",
+    "2. Examples to draw histograms:\n",
+    "    - [bokehHistoDraw](bokehDraw/THnInteractive.ipynb)\n",
+    "    - [bokehHistoDraw(R_Phi_Z_pT)](bokehDraw/THnVisualization.ipynb)\n",
+    "3. Stand alone applications:\n",
+    "    - [from randomly generated example data](bokehDraw/standAlone.ipynb)\n",
+    "    - [from a ROOT:TTree](bokehDraw/bokehTreeDraw.ipynb)\n",
     "4. [Regresssion Forest](MLpipeline/plotRegressionForestError.ipynb)\n",
     "5. [Quantile Regression forest](QuantileRegression/QuantilRegressionForest.ipynb)\n",
     "6. [Distortion Map](distortionCase/pandaTools/distortionDraw.ipynb)\n",
     "\n",
     "Examples which are not working right now:\n",
     "1. [Distortion Check](QuantileRegression/distortionCase/distortionCheck0.ipynb)\n",
-    "2. [TTreeHnInteractive](TTreeHnInteractive/TTreeHNInteractiveV4.ipynb)\n",
-    "\n"
+    "2. [TTreeHnInteractive](TTreeHnInteractive/TTreeHNInteractiveV4.ipynb)\n"
    ]
   },
   {
@@ -50,7 +53,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
