PWGPP-517: ColumnDataSource is used with less data, which improved the speed

--- a/tutorial/bokehDraw/THnInteractive.ipynb
+++ b/tutorial/bokehDraw/THnInteractive.ipynb
@@ -50,7 +50,7 @@
    "outputs": [],
    "source": [
     "selection=\"hisdY(0),hisPullYLow(0),hisPullYHM1(0)\"\n",
-    "x=bokehDrawHistoTHn(hisArray,selection,ncols=3);"
+    "x=bokehDrawHistoTHn(hisArray,selection,nCols=3);"
    ]
   },
   {
@@ -77,7 +77,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
