--- a/tutorial/bokehDraw/THnVisualization.ipynb
+++ b/tutorial/bokehDraw/THnVisualization.ipynb
@@ -58,7 +58,7 @@
    "outputs": [],
    "source": [
     "selection=\"merge(0),merge(1),merge(2),merge(3)\"\n",
-    "x=bokehDrawHistoTHn(hisArray,selection,ncols=2);"
+    "x=bokehDrawHistoTHn(hisArray,selection,nCols=2);"
    ]
   },
   {
@@ -85,7 +85,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
