small updates in tutorial

--- a/tutorial/bokehDraw/bokehDrawArray.ipynb
+++ b/tutorial/bokehDraw/bokehDrawArray.ipynb
@@ -39,7 +39,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "widgets=\"tab.sliders(slider.A(0,100,1,10,90),slider.B(0,100,1,0,100), slider.D(0,100,1,10,80))\"\n",
+    "widgets=\"tab.sliders(slider.A(0,100,1,10,90),slider.B(0,100,1,0,100),slider.C(0,100,1,0,100), slider.D(0,100,1,10,80))\"\n",
     "figureLayout: str = '((0,1,2),(3, x_visible=1),commonX=1,x_visible=1,y_visible=0,plot_height=250,plot_width=1000)'\n",
     "tooltips = [(\"VarA\", \"(@A)\"), (\"VarB\", \"(@B)\"), (\"VarC\", \"(@C)\"), (\"VarD\", \"(@D)\")]\n",
     "fig=bokehDraw.fromArray(df, \"A>0\", figureArray,widgets,tooltips=tooltips, layout=figureLayout)\n",
