bokehDraw with figureArray from TTree has been implemented

--- a/tutorial/bokehDraw/bokehTreeDraw.ipynb
+++ b/tutorial/bokehDraw/bokehTreeDraw.ipynb
@@ -114,11 +114,18 @@
    "outputs": [],
    "source": [
     "variables=\"pileUp:tailF:commonF:typeF:fraction:param.fElements[1]:norm:slope:isMax:MB:P0:P1:PA:isMaxTot\"\n",
-    "df=treeToPanda(tree,variables,\"1\",100000000,0,\".fElements\");\n",
+    "df=tree2Panda(tree,variables,\"1\",100000000,0,\".fElements\");\n",
     "#widgets=\"tab.first(slider.commonF(0,15,5,0,5)),tab.second(dropdown.MB(0,0.5,1)),accordion.first(slider.P0(0,1,0.5,0,1)),accordion.second(checkbox.isMax),slider.typeF(0,4,1,0)\"\n",
     "widgets=\"query.custom(), tab.sliders(slider.commonF(0,15,5,0,5),slider.fraction(0,100,4,0,100)),\"\n",
     "widgets+=\"tab.options(checkbox.P0(0),checkbox.P1(1),checkbox.isMax(True), checkbox.isMaxTot(false), checkbox.MB(), checkbox.pileUp()))\"\n",
-    "bokeh=bokehDraw(df.query(\"tailF>-1\"),\"tailF>-1\",\"tailF\",\"slope\",\"fraction\",widgets,p3,commonX=1,size=6,ncols=1, tooltips=tooltips)"
+    "bokeh=bokehDraw(df,\"tailF>-1\",\"tailF\",\"slope\",\"fraction\",widgets,p3,commonX=1,size=6,ncols=1, tooltips=tooltips)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Bokeh draw via figure array"
    ]
   },
   {
@@ -126,14 +133,38 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "variables=\"pileUp:tailF:commonF:typeF:fraction:param.fElements[1]:norm:slope:isMax:MB:P0:P1:PA:isMaxTot\"\n",
+    "df=tree2Panda(tree,variables,\"1\",100000000,0,\".fElements\");\n",
+    "\n",
+    "tooltips=[('Is maximum','@isMax'),(\"Pad type\",\"@typeF\")]\n",
+    "p3 = figure(plot_width=700, plot_height=400, title=\"template\")\n",
+    "widgets=\"accordion.first(slider.P0(0,1,0.5,0,1),slider.commonF(0,15,5,0,5)),accordion.second(dropdown.MB(0,0.5,1)),accordion.second(checkbox.isMax(False)),slider.typeF(0,4,1,0)\"\n",
+    "\n",
+    "figureArray= [\n",
+    "    [['tailF'], ['slope','norm-1'], {\"color\": \"red\", \"size\": 2, \"colorZvar\":\"fraction\"}],\n",
+    "    [['fraction'], ['slope','norm-1'], {\"color\": \"red\", \"size\": 2, \"colorZvar\":\"tailF\"}],\n",
+    "    ['table']\n",
+    "]\n",
+    "figureLayout: str = '((0,1),(2, x_visible=1),commonY=1, x_visible=1,y_visible=0,plot_height=250,plot_width=1000)'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#bokeh=bokehDraw.fromArray(df,\"tailF>-1\",figureArray,widgets,layout=figureLayout, tooltips=tooltips)\n",
+    "fig=bokehDraw.fromArray(tree, \"tailF>=-1\", figureArray,widgets,tooltips=tooltips, layout=figureLayout,nEntries=100000000)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
