--- a/tutorial/bokehDraw/bokehTreeDraw.ipynb
+++ b/tutorial/bokehDraw/bokehTreeDraw.ipynb
@@ -94,7 +94,7 @@
     "variables=\"pileUp:tailF:commonF:typeF:fraction:norm:slope:isMax:MB:P0:P1:PA\"\n",
     "tooltips=[('Is maximum','@isMax'),(\"Pad type\",\"@typeF\")]\n",
     "p3 = figure(plot_width=700, plot_height=400, title=\"template\")\n",
-    "widgets=\"accordion.first(slider.P0(0,1,0.5,0,1),slider.commonF(0,15,5,0,5)),accordion.second(dropdown.MB(0,0.5,1)),accordion.second(checkbox.isMax(False)),slider.typeF(0,4,1,0)\"\n",
+    "widgets=\"query.name(), accordion.first(slider.P0(0,1,0.5,0,1),slider.commonF(0,15,5,0,5)),accordion.second(dropdown.MB(0,0.5,1)),accordion.second(checkbox.isMax(False)),slider.typeF(0,4,1,0)\"\n",
     "\n",
     "#xxx=bokehDraw(tree,\"tailF>-1\",\"tailF\",\"slope\",\"fraction\",slider,p3,commonX=1,size=8,ncols=1,nEntries=100000000,tooltips=tooltips,variables=variables)\n",
     "xxx=bokehDraw(tree,\"tailF>=-1\",\"tailF\",\"slope\",\"fraction\",widgets,p3,commonX=1,size=8,ncols=1,nEntries=100000000,tooltips=tooltips)"
@@ -139,7 +139,7 @@
     "\n",
     "tooltips=[('Is maximum','@isMax'),(\"Pad type\",\"@typeF\")]\n",
     "p3 = figure(plot_width=700, plot_height=400, title=\"template\")\n",
-    "widgets=\"accordion.first(slider.P0(0,1,0.5,0,1),slider.commonF(0,15,5,0,5)),accordion.second(dropdown.MB(0,0.5,1)),accordion.second(checkbox.isMax(False)),slider.typeF(0,4,1,0)\"\n",
+    "widgets=\"query.custom(), accordion.first(slider.P0(0,1,0.5,0,1),slider.commonF(0,15,5,0,5)),accordion.second(dropdown.MB(0,0.5,1)),accordion.second(checkbox.isMax(False)),slider.typeF(0,4,1,0)\"\n",
     "\n",
     "figureArray= [\n",
     "    [['tailF'], ['slope','norm-1'], {\"color\": \"red\", \"size\": 2, \"colorZvar\":\"fraction\"}],\n",
