--- a/tutorial/bokehDraw/bokehTreeDraw.ipynb
+++ b/tutorial/bokehDraw/bokehTreeDraw.ipynb
@@ -71,7 +71,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bokehDraw.verbosity=3"
+    "getTreeInfo(tree)"
    ]
   },
   {
@@ -114,7 +114,7 @@
    "outputs": [],
    "source": [
     "variables=\"pileUp:tailF:commonF:typeF:fraction:param.fElements[1]:norm:slope:isMax:MB:P0:P1:PA:isMaxTot\"\n",
-    "df=tree2Panda(tree,variables,\"1\",100000000,0,\".fElements\");\n",
+    "df=treeToPanda(tree,variables,\"1\",100000000,0,\".fElements\");\n",
     "#widgets=\"tab.first(slider.commonF(0,15,5,0,5)),tab.second(dropdown.MB(0,0.5,1)),accordion.first(slider.P0(0,1,0.5,0,1)),accordion.second(checkbox.isMax),slider.typeF(0,4,1,0)\"\n",
     "widgets=\"query.custom(), tab.sliders(slider.commonF(0,15,5,0,5),slider.fraction(0,100,4,0,100)),\"\n",
     "widgets+=\"tab.options(checkbox.P0(0),checkbox.P1(1),checkbox.isMax(True), checkbox.isMaxTot(false), checkbox.MB(), checkbox.pileUp()))\"\n",
@@ -135,7 +135,7 @@
    "outputs": [],
    "source": [
     "variables=\"pileUp:tailF:commonF:typeF:fraction:param.fElements[1]:norm:slope:isMax:MB:P0:P1:PA:isMaxTot\"\n",
-    "df=tree2Panda(tree,variables,\"1\",100000000,0,\".fElements\");\n",
+    "df=treeToPanda(tree,variables,\"1\",100000000,0,\".fElements\");\n",
     "\n",
     "tooltips=[('Is maximum','@isMax'),(\"Pad type\",\"@typeF\")]\n",
     "p3 = figure(plot_width=700, plot_height=400, title=\"template\")\n",
@@ -158,6 +158,13 @@
     "#bokeh=bokehDraw.fromArray(df,\"tailF>-1\",figureArray,widgets,layout=figureLayout, tooltips=tooltips)\n",
     "fig=bokehDraw.fromArray(tree, \"tailF>=-1\", figureArray,widgets,tooltips=tooltips, layout=figureLayout,nEntries=100000000)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
