Tree drawing from Figure Array for StandAlone...

--- a/tutorial/bokehDraw/bokehTreeDrawSA.ipynb
+++ b/tutorial/bokehDraw/bokehTreeDrawSA.ipynb
@@ -122,6 +122,40 @@
     "#widgets+=\"tab.options(checkbox.P0(0),checkbox.P1(1),checkbox.isMax(True), checkbox.isMaxTot(false), checkbox.MB(), checkbox.pileUp()))\"\n",
     "bokeh=bokehDrawSA(df.query(\"tailF>-1\"),\"tailF>-1\",\"tailF\",\"slope\",\"fraction\",widgets,p3,commonX=1,size=6,ncols=1, tooltips=tooltips)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Bokeh Draw Tree via Figure Array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tooltips=[('Is maximum','@isMax'),(\"Pad type\",\"@typeF\")]\n",
+    "p3 = figure(plot_width=700, plot_height=400, title=\"template\")\n",
+    "widgets=\"query.custom(), slider.P0(0,1,0.5,0,1),slider.commonF(0,15,5,0,5)),dropdown.MB(0,0.5,1),slider.typeF(0,4,1,0)\"\n",
+    "\n",
+    "figureArray= [\n",
+    "    [['tailF'], ['slope','norm-1'], {\"color\": \"red\", \"size\": 2, \"colorZvar\":\"fraction\"}],\n",
+    "    [['fraction'], ['slope','norm-1'], {\"color\": \"red\", \"size\": 2, \"colorZvar\":\"tailF\"}],\n",
+    "    ['table']\n",
+    "]\n",
+    "figureLayout: str = '((0,1),(2, x_visible=1),commonY=1, x_visible=1,y_visible=0,plot_height=250,plot_width=1000)'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig=bokehDrawSA.fromArray(tree, \"tailF>=-1\", figureArray,widgets,tooltips=tooltips, layout=figureLayout,nEntries=100000000)"
+   ]
   }
  ],
  "metadata": {
@@ -140,7 +174,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
