--- a/tutorial/bokehDraw/standAlone.ipynb
+++ b/tutorial/bokehDraw/standAlone.ipynb
@@ -100,7 +100,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bokehDrawSA.initWidgets?"
+    "bokehDrawSA.initWidgets?\n"
    ]
   }
  ],
