--- a/tutorial/bokehDraw/bokehTreeDrawSA.ipynb
+++ b/tutorial/bokehDraw/bokehTreeDrawSA.ipynb
@@ -138,7 +138,7 @@
    "source": [
     "tooltips=[('Is maximum','@isMax'),(\"Pad type\",\"@typeF\")]\n",
     "p3 = figure(plot_width=700, plot_height=400, title=\"template\")\n",
-    "widgets=\"query.custom(), slider.P0(0,1,0.5,0,1),slider.commonF(0,15,5,0,5)),dropdown.MB(0,0.5,1),slider.typeF(0,4,1,0)\"\n",
+    "widgets=\"query.custom(), checkbox.P0(1), slider.commonF(0,15,5,0,5), dropdown.MB(0,1), slider.typeF(0,4,1,0)\"\n",
     "\n",
     "figureArray= [\n",
     "    [['tailF'], ['slope','norm-1'], {\"color\": \"red\", \"size\": 2, \"colorZvar\":\"fraction\"}],\n",
@@ -154,7 +154,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig=bokehDrawSA.fromArray(tree, \"tailF>=-1\", figureArray,widgets,tooltips=tooltips, layout=figureLayout,nEntries=100000000)"
+    "fig=bokehDrawSA.fromArray(tree, \"tailF>=-1\", figureArray,widgets,tooltips=tooltips, layout=figureLayout)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import bokeh\n",
+    "bokeh.models.widgets.groups.CheckboxGroup?"
    ]
   }
  ],
