--- a/tutorial/QuantileRegression/distortionCase/distortionCheck0.ipynb
+++ b/tutorial/QuantileRegression/distortionCase/distortionCheck0.ipynb
@@ -44,12 +44,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tutorial.distortionCase.distortionStudy import *\n",
-    "from TTreeHnInteractive.TTreeHnBrowser import *\n",
-    "from InteractiveDrawing.bokeh.bokehTools import *\n",
+    "from RootInteractive.tutorial.distortionCase.distortionStudy import *\n",
+    "from RootInteractive.TTreeHnInteractive.TTreeHnBrowser import *\n",
+    "from RootInteractive.InteractiveDrawing.bokeh.bokehTools import *\n",
     "import matplotlib.pyplot as plt\n",
-    "from MLpipeline.NDFunctionInterface import  DataContainer, Fitter\n",
-    "from InteractiveDrawing.bokeh.bokehDrawPanda import *\n",
+    "from RootInteractive.MLpipeline.NDFunctionInterface import  DataContainer, Fitter\n",
+    "#from RootInteractive.InteractiveDrawing.bokeh.bokehDrawPanda import *\n",
+    "from RootInteractive.InteractiveDrawing.bokeh.bokehDraw import *\n",
     "output_notebook()\n",
     "p3 = figure(plot_width=400, plot_height=250, title=\"template\")"
    ]
@@ -109,8 +110,8 @@
    "outputs": [],
    "source": [
     "vars=\"drphiSector2:drphiSector4:drphiSector6:drphiSector7:drphiSector9:drphiSector16:drphiSector20:drphiSector30\"\n",
-    "sliders=\"meanTRDCurrent(0,0.5,0.05,0,1):H2O(0,5,0.2,0,5):deltaTRDCurrentNorm(0.0,10.,0.1,0,10)\"\n",
-    "plot2=bokehDrawPanda(dfsplit.sample(200),\"time>0\",\"drphiMean\",vars,\"H2O\",sliders,p3,ncols=3, commonX=1, commonY=1,tooltip=tooltips,size=5)"
+    "sliders=\"slider.meanTRDCurrent(0,0.5,0.05,0,1):slider.H2O(0,5,0.2,0,5):slider.deltaTRDCurrentNorm(0.0,10.,0.1,0,10)\"\n",
+    "plot2=bokehDraw(dfsplit.sample(200),\"time>0\",\"drphiMean\",vars,\"H2O\",sliders,p3,ncols=3, commonX=1, commonY=1,tooltip=tooltips,size=5)"
    ]
   },
   {
@@ -131,8 +132,8 @@
    "outputs": [],
    "source": [
     "vars=\"drphiSector2:drphiSector4:drphiSector6:drphiSector7:drphiSector9:drphiSector16:drphiSector20:drphiSector30\"\n",
-    "sliders=\"meanTRDCurrent(0,0.5,0.05,0,1):H2O(0,5,0.2,0,5):deltaTRDCurrentNorm(0.0,10.,0.1,0,10)\"\n",
-    "plot2=bokehDrawPanda(dfsplit.sample(200),\"time>0\",\"meanTRDCurrent\",vars,\"H2O\",sliders,p3,ncols=3, commonX=1,tooltip=tooltips,size=5)"
+    "sliders=\"slider.meanTRDCurrent(0,0.5,0.05,0,1):slider.H2O(0,5,0.2,0,5):slider.deltaTRDCurrentNorm(0.0,10.,0.1,0,10)\"\n",
+    "plot2=bokehDraw(dfsplit.sample(200),\"time>0\",\"meanTRDCurrent\",vars,\"H2O\",sliders,p3,ncols=3, commonX=1,tooltip=tooltips,size=5)"
    ]
   },
   {
@@ -191,8 +192,10 @@
    "outputs": [],
    "source": [
     "p3 = figure(plot_width=400, plot_height=250, title=\"drphiSector\")\n",
-    "plot=drawColzArray(test,\" abs (invTRDCurrentNorm)<0.05&year<2017\", varFit,\"RF:RF200:KNN:KM\",\"H2O\",p3,ncols=2,tooltip=tooltips,size=5)\n",
-    "plot=drawColzArray(test,\" abs (invTRDCurrentNorm)<0.05&year<2017\", \"RF\",\"RF:RF200:KNN:KM\",\"H2O\",p3,ncols=2,tooltip=tooltips,size=5)"
+    "plot,data,dummy=drawColzArray(test,\" abs (invTRDCurrentNorm)<0.05&year<2017\", varFit,\"RF:RF200:KNN:KM\",\"H2O\",p3,ncols=2,tooltip=tooltips,size=5)\n",
+    "show(plot)\n",
+    "plot,data,dummy=drawColzArray(test,\" abs (invTRDCurrentNorm)<0.05&year<2017\", \"RF\",\"RF:RF200:KNN:KM\",\"H2O\",p3,ncols=2,tooltip=tooltips,size=5)\n",
+    "show(plot)"
    ]
   },
   {
@@ -205,7 +208,8 @@
     "fitter.AppendStatPandas(\"RF200\",test)\n",
     "test=SetAlias(test,\"pullRF_2\",\"(drphiSector2-RFMedian)/RFRMS\")\n",
     "test=SetAlias(test,\"pullRF200_2\",\"(drphiSector2-RF200Median)/RF200RMS\")\n",
-    "drawColzArray(test,\"abs(invTRDCurrentNorm)<0.05&year<2017\", \"RF\",\"RFMedian\",\"H2O\",p3,ncols=3)\n",
+    "plot,data,dummy=drawColzArray(test,\"abs(invTRDCurrentNorm)<0.05&year<2017\", \"RF\",\"RFMedian\",\"H2O\",p3,ncols=3)\n",
+    "show(plot)\n",
     "test['pullRF_2'].plot.hist()"
    ]
   },
@@ -253,8 +257,9 @@
     "dfsplit=SetAlias(dfsplit,\"pullRF\",\"(drphiSector2-RFMedian)/RFRMS\")\n",
     "dfsplit=SetAlias(dfsplit,\"deltaRF\",\"(drphiSector2-RFMedian)\")\n",
     "p = figure(plot_width=500, plot_height=300, title=\"drphiSector2\")\n",
-    "plot=drawColzArray(dfsplit.sample(300),\" trdMeanMedianL0<1 & abs (invTRDCurrentNorm)<0.05&year<2017\", \"meanTRDCurrent\",\"drphiSector4:RF200\",\"H2O\",p,commonX=1,commonY=1,size=5,\n",
-    "                  tooltip=tooltips)"
+    "plot,data,dummy=drawColzArray(dfsplit.sample(300),\" trdMeanMedianL0<1 & abs (invTRDCurrentNorm)<0.05&year<2017\", \"meanTRDCurrent\",\"drphiSector4:RF200\",\"H2O\",p,commonX=1,commonY=1,size=5,\n",
+    "                  tooltip=tooltips)\n",
+    "show(plot)"
    ]
   },
   {
@@ -274,8 +279,8 @@
    "outputs": [],
    "source": [
     "ptime = figure(plot_width=1000, plot_height=150, title=\"template\")\n",
-    "sliders=\"meanTRDCurrent(0,0.3,0.03,0,1):H2O(0,5,0.2,0,5):deltaTRDCurrentNorm(-0.0,0.1,0.01,-0.2,0.2)\"\n",
-    "plot0=bokehDrawPanda(dfsplit,\"trdMeanMedianL0<1 & abs (invTRDCurrentNorm)<0.2&year<2017& iz2x==4\",\"date\",\"meanTRDCurrent:drphiSector4:deltaRF:pullRF:H2O:gascompCO2\",\"H2O\",sliders,ptime,ncols=1, commonX=1,size=5,\n",
+    "sliders=\"slider.meanTRDCurrent(0,0.3,0.03,0,1):slider.H2O(0,5,0.2,0,5):slider.deltaTRDCurrentNorm(-0.0,0.1,0.01,-0.2,0.2)\"\n",
+    "plot0=bokehDraw(dfsplit,\"trdMeanMedianL0<1 & abs (invTRDCurrentNorm)<0.2&year<2017& iz2x==4\",\"date\",\"meanTRDCurrent:drphiSector4:deltaRF:pullRF:H2O:gascompCO2\",\"H2O\",sliders,ptime,ncols=1, commonX=1,size=5,\n",
     "                  tooltip=tooltips,x_axis_type='datetime')\n"
    ]
   },
@@ -305,14 +310,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15rc1"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
