--- a/RootInteractive/tutorial/bokehDraw/test_BokehClient.ipynb
+++ b/RootInteractive/tutorial/bokehDraw/test_BokehClient.ipynb
@@ -35,7 +35,8 @@
     "df = pd.DataFrame(np.random.randint(0, 100, size=(100, 4)), columns=list('ABCD'))\n",
     "df[\"Category\"]=df.eval(\"A%5\")\n",
     "df.head(10)\n",
-    "df.metaData = {'A.AxisTitle': \"A (cm)\", 'B.AxisTitle': \"B (cm/s)\", 'C.AxisTitle': \"C (s)\", 'D.AxisTitle': \"D (a.u.)\"}\n",
+    "initMetadata(df)\n",
+    "df.meta.metaData = {'A.AxisTitle': \"A (cm)\", 'B.AxisTitle': \"B (cm/s)\", 'C.AxisTitle': \"C (s)\", 'D.AxisTitle': \"D (a.u.)\"}\n",
     "#print(df.metaData)"
    ]
   },
@@ -134,7 +135,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
