PWGPP-562 - adding machine learning working example

--- a/RootInteractive/tutorial/MLpipeline/NDRegressionDemo.ipynb
+++ b/RootInteractive/tutorial/MLpipeline/NDRegressionDemo.ipynb
@@ -4,13 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# NDRegreesionDemo\n",
+    "# NDRegreesionDemo + Error of regression\n",
     "Example usage of the ML interface/warppers to Random Forets, KNN and Keras\n",
     "Goal MLpipeline.NDFunctionInterface:\n",
     "* Using registered predefined method as a standard regression function\n",
     "* Provide functionaltiy to calculate error estimators \n",
     "\n",
-    "!!! NDFunctionInterface classes are  experimental. !!!\n",
+    "In this example we would like to demonstrate that regression error for fuction of interes are not constant\n",
+    "We choose pariodic function for regresion - to emulate TPC sector structure and radial dependent occupancy ...\n",
+    "```\n",
+    "f(A,B,C,D) = A+exp(3B)+sin(6.28C)\n",
+    "```\n",
+    "\n",
+    "### **!!! NDFunctionInterface classes are  experimental. !!!**\n",
     "* Implementation and interce wil change  - to be \"pythonic\"\n",
     "* better integration with visulization \n",
     "* integration with trees"
@@ -64,7 +70,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Interactive visualization of input function"
+    "# Interactive visualization of input function\n",
+    "* function value = A+exp(3B)+sin(6.28C) as function of A, B, C and csin"
    ]
   },
   {
@@ -88,7 +95,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Make fits"
+    "## Make fits\n",
+    "* Register fitters and make a fit\n",
+    "* Regirtartion of fitters will be more pythonic soon"
    ]
   },
   {
@@ -240,20 +249,6 @@
    "source": [
     "drawColzArray(test,\"A>0\",\"RF\", \"RFRMS\",\"csin\",None,doDraw=1,tooltips=tooltips)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
