Adding markup documentation

--- a/RootInteractive/tutorial/bokehDraw/makePandaWidgets.ipynb
+++ b/RootInteractive/tutorial/bokehDraw/makePandaWidgets.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from InteractiveDrawing.bokeh.bokehDrawSA import *\n",
+    "from RootInteractive.InteractiveDrawing.bokeh.bokehDrawSA import *\n",
     "from bokeh.models import *\n",
     "from bokeh.io import output_notebook\n",
     "#from bokeh.plotting import figure\n",
@@ -17,7 +17,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create random panda"
+    "## Create random input panda\n",
+    "* Uniformly distributed varaibles A, B,C,D,E,F\n",
+    "* categorical input data AA, BB, CC "
    ]
   },
   {
@@ -38,7 +40,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create multi figure"
+    "## Create multi figure\n",
+    "* figure layout "
    ]
   },
   {
@@ -52,7 +55,7 @@
     "    [['A'], ['C-A'], {\"color\": \"red\", \"size\": 7, \"colorZvar\":\"C\"}],\n",
     "    [['A'], ['C+A', 'C-A']],\n",
     "    [['B'], ['C+B', 'C-B'],{\"color\": \"red\", \"size\": 7, \"colorZvar\":\"C\"}],\n",
-    "    [['D'], ['(A+B+C)*D'], {\"size\": 10}],\n",
+    "    [['D'], ['(A+B+C)*D'], {\"size\": 10}]\n",
     "]\n",
     "\n",
     "widgetParams=[\n",
