--- a/RootInteractive/tutorial/bokehDraw/makePandaWidgets.ipynb
+++ b/RootInteractive/tutorial/bokehDraw/makePandaWidgets.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Bokeh standalone dashborad example\n",
+    "* 0. Create random input panda\n",
+    "* 1. Describe multi figure dashboard\n",
+    "* 2. Create dashboard - interactive array of figures + widgets"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -17,7 +27,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create random input panda\n",
+    "## 0. Create random input panda\n",
     "* Uniformly distributed varaibles A, B,C,D,E,F\n",
     "* categorical input data AA, BB, CC "
    ]
@@ -33,6 +43,7 @@
     "df[\"CC\"]=(df.C*5).round(0)\n",
     "df[\"DD\"]=(df.D*2).round(0)\n",
     "initMetadata(df)\n",
+    "df.meta.metaData = {'A.AxisTitle': \"A (cm)\", 'B.AxisTitle': \"B (cm/s)\", 'C.AxisTitle': \"C (s)\", 'D.AxisTitle': \"D (a.u.)\"}\n",
     "df.head(3)"
    ]
   },
@@ -40,8 +51,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create multi figure\n",
-    "* figure layout "
+    "## 1. Describe multi figure dashboard \n",
+    "* figureArray - list of figures\n",
+    "  *  [[varX ] [ varY], {figure options}]\n",
+    "  *  TODO -add global option\n",
+    "* figure layout - layout of figures\n",
+    "  * layout = [raw0,row1 ..., options]\n",
+    "  * rowi =[index0, .... row options] \n",
+    "* widget array\n",
+    "  * [[type], [var,params], {widget options}]\n",
+    "    * different option to slect ranges - user definden, [min,max],[mean/median-n*sigma, mean/median+n*sigma]\n",
+    "  * TODO  =add global options\n",
+    "* widget layout\n",
+    "  * layout = [raw0,row1 ..., options]\n",
+    "  * rowi =[index0, .... row options] \n",
+    "\n",
+    "\n",
+    "Options:\n",
+    " * almost all bokeh drawing options\n",
+    " * widgets controling images - modyfying data sources\n",
+    " * derived options - sharing of axis between figures (commonX, commonY)\n",
+    "  "
    ]
   },
   {
@@ -51,14 +81,17 @@
    "outputs": [],
    "source": [
     "figureArray = [\n",
-    "#   ['A'], ['C-A'], {\"color\": \"red\", \"size\": 7, \"colorZvar\":\"C\", \"filter\": \"A<0.5\"}],\n",
     "    [['A'], ['C-A'], {\"color\": \"red\", \"size\": 7, \"colorZvar\":\"C\"}],\n",
     "    [['A'], ['C+A', 'C-A']],\n",
     "    [['B'], ['C+B', 'C-B'],{\"color\": \"red\", \"size\": 7, \"colorZvar\":\"C\"}],\n",
     "    [['D'], ['(A+B+C)*D'], {\"size\": 10}]\n",
     "]\n",
-    "\n",
-    "widgetParams=[\n",
+    "figureLayout=[\n",
+    "    [0,1,2, {'commonX':1,'y_visible':2,'plot_height':300}],\n",
+    "    [3,{'plot_height':100}],\n",
+    "    {'plot_height':100,'sizing_mode':'scale_width'}\n",
+    "]\n",
+    "widgetArray=[\n",
     "    ['range', ['A']],\n",
     "    ['range', ['B',0,1,0.1,0,1]], \n",
     "    ['range', ['C'], {'type':'minmax'}],\n",
@@ -69,8 +102,7 @@
     "    ['select',[\"CC\",0,1,2,3]],\n",
     "    #['slider','F', ['@min()','@max()','@med','@min()','@median()+3*#tlm()']], # to be implmneted\n",
     "]\n",
-    "figureLayout: str = '((0,1,2, plot_height=300),(3, x_visible=1),commonX=1,plot_height=300,plot_width=1200)'\n",
-    "widgetLayout: str = '((0,1,2),(3,4,5),(6,7), plot_width=1200)'    \n",
+    "widgetLayout=[ [0,1,2], [3,4,5], [6,7], {'sizing_mode':'scale_width'} ]\n",
     "tooltips = [(\"VarA\", \"(@A)\"), (\"VarB\", \"(@B)\"), (\"VarC\", \"(@C)\"), (\"VarD\", \"(@D)\")]   "
    ]
   },
@@ -78,7 +110,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create widgets"
+    "## 2. Create dashboard - interactive array of figures + widgets\n",
+    "* create dashboard\n",
+    "* save in standalon  html file  "
    ]
   },
   {
@@ -88,41 +122,8 @@
    "outputs": [],
    "source": [
     "output_file(\"makePandaWidgetsSA.html\")\n",
-    "bokehDrawSA.fromArray(df, \"A>0\", figureArray, widgetParams, layout=figureLayout, tooltips=tooltips,widgetLayout=widgetLayout)"
+    "bokehDrawSA.fromArray(df, \"A>0\", figureArray, widgetArray, layout=figureLayout, tooltips=tooltips,widgetLayout=widgetLayout,sizing_mode=\"scale_width\")"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## The same  plot using sequence of steps"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "output_file(\"makePandaWidgetsSA.html\")\n",
-    "#xxx,yyy, plotArray= drawColzArray(df,\"A>0\",\"A\", \"B\",\"C\",None)\n",
-    "pAll, cdsSel, plotArray, dataFrameOrig= bokehDrawArray(df,\"A>0\",figureArray,layout=figureLayout)\n",
-    "cdsOrig=ColumnDataSource(dataFrameOrig)\n",
-    "widgetArray=makeBokehWidgets(df,widgetParams,cdsOrig,cdsSel)  \n",
-    "x, layoutList, optionsLayout = processBokehLayout(widgetLayout,  widgetArray)\n",
-    "#\n",
-    "plotArray2=plotArray\n",
-    "plotArray2.append(gridplotRow(layoutList))\n",
-    "pAll=gridplotRow(plotArray2)\n",
-    "show(pAll)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
