unnecessary imports are cleaned

--- a/RootInteractive/tutorial/bokehDraw/bokehTreeDraw.ipynb
+++ b/RootInteractive/tutorial/bokehDraw/bokehTreeDraw.ipynb
@@ -22,12 +22,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from RootInteractive.Tools.aliTreePlayer import *\n",
-    "from RootInteractive.TTreeHnInteractive.TTreeHnBrowser import *\n",
-    "from RootInteractive.InteractiveDrawing.bokeh.bokehTools import *\n",
-    "#from MLpipeline.NDFunctionInterface import  DataContainer, Fitter\n",
-    "from RootInteractive.InteractiveDrawing.bokeh.bokehDrawPanda import *\n",
     "from RootInteractive.InteractiveDrawing.bokeh.bokehDraw import *\n",
+    "from bokeh.io import output_notebook, show\n",
     "output_notebook()\n",
     "p3 = figure(plot_width=700, plot_height=400, title=\"template\")"
    ]
