--- a/RootInteractive/tutorial/MLpipeline/NDRegressionDemo.ipynb
+++ b/RootInteractive/tutorial/MLpipeline/NDRegressionDemo.ipynb
@@ -163,6 +163,7 @@
     "]\n",
     "widgets=\"query.custom(), slider.A(0,1,0.1,0,1), slider.B(0,1,0.1,0,1), slider.sinC(0,1,0.1,0,1)\"\n",
     "figureLayout: str = '((0,1),(2,3),(4, plot_height=100),commonY=1, commonX=0, x_visible=1,y_visible=0,plot_height=250,plot_width=1200)'\n",
+    "output_file(\"NDFunctionInterace_0.html\")   \n",
     "fig=bokehDrawSA.fromArray(test, \"A>0\", figureArray,widgets,tooltips=tooltips, layout=figureLayout)  "
    ]
   },
@@ -191,6 +192,7 @@
     "]\n",
     "widgets=\"query.custom(), slider.A(0,1,0.1,0,1), slider.B(0,1,0.1,0,1), slider.C(0,1,0.1,0,1)\"\n",
     "figureLayout: str = '((0,1,2,3),(4,5, commonX=4),(6, plot_height=150),commonY=1, commonX=0, x_visible=1,y_visible=0,plot_height=250,plot_width=1400)'\n",
+    "output_file(\"NDFunctionInterace_1.html\")\n",
     "fig=bokehDrawSA.fromArray(test, \"A>0\", figureArray,widgets,tooltips=tooltips, layout=figureLayout)  "
    ]
   },
@@ -218,8 +220,9 @@
     "    [['RF-valueOrig'], ['KM-valueOrig'], {\"color\": \"red\", \"size\": 2, \"colorZvar\":\"B\"}],\n",
     "    ['table']\n",
     "]\n",
-    "widgets=\"query.custom(), slider.A(0,1,0.1,0,1), slider.B(0,1,0.1,0,1), slider.C(0,1,0.1,0,1), slider.pullRF(-6,6,0.1,-6,6)\"\n",
+    "widgets=\"query.custom(), slider.A(0,1,0.1,0,1), slider.B(0,1,0.1,0,1), slider.C(0,1,0.1,0,1), slider.pullRF(-6,6,0.1,-6,6), slider.csin(-1,1,0.1,-1,1)\"\n",
     "figureLayout: str = '((0,1,2),(3,4, commonX=4),(5, plot_height=150),commonY=1, commonX=0, x_visible=1,y_visible=0,plot_height=250,plot_width=1400)'\n",
+    "output_file(\"NDFunctionInterace_2.html\")\n",
     "fig=bokehDrawSA.fromArray(test, \"A>0\", figureArray,widgets,tooltips=tooltips, layout=figureLayout) "
    ]
   },
