options for table are added

--- a/RootInteractive/test/TestDrawVarArray.ipynb
+++ b/RootInteractive/test/TestDrawVarArray.ipynb
@@ -14,19 +14,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Welcome to JupyROOT 6.13/03\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from TTreeHnBrowser import *"
+    "from RootInteractive.TTreeHnInteractive.TTreeHnBrowser import *"
    ]
   },
   {
@@ -39,24 +31,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e7c6f74c65f44f07a73831b3460d3bce",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VkJveChjaGlsZHJlbj0oSEJveChjaGlsZHJlbj0oVGV4dCh2YWx1ZT11J3gxKDE6MjowLjE6MS41OjEuNzUpJyksIFRvZ2dsZUJ1dHRvbih2YWx1ZT1GYWxzZSwgZGVzY3JpcHRpb249dSdTdGHigKY=\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "varArray=TDrawVarArray()\n",
     "varArray.addVariable('x1(1:2:0.1:1.5:1.75)')\n",
@@ -77,17 +54,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(HBox(children=(Text(value=u'x1(1:2:0.1:1.5:1.75)'), ToggleButton(value=False, description=u'Status', tooltip=u'Enable/disable'), Button(description=u'Remove', style=ButtonStyle(), tooltip=u'Remove slider')), layout=Layout(width=u'100%')), HBox(children=(Text(value=u'x2(1:2:0.1:1.5:1.75)'), ToggleButton(value=False, description=u'Status', tooltip=u'Enable/disable'), Button(description=u'Remove', style=ButtonStyle(), tooltip=u'Remove slider')), layout=Layout(width=u'100%')), HBox(children=(Text(value=u'x3(1:2:0.1:1.5:1.75)'), ToggleButton(value=False, description=u'Status', tooltip=u'Enable/disable'), Button(description=u'Remove', style=ButtonStyle(), tooltip=u'Remove slider')), layout=Layout(width=u'100%')), HBox(children=(Text(value=u'x4(100:200:0.1:110:180)'), ToggleButton(value=False, description=u'Status', tooltip=u'Enable/disable'), Button(description=u'Remove', style=ButtonStyle(), tooltip=u'Remove slider')), layout=Layout(width=u'100%')))\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "varArray.addVariable('x4(100:200:0.1:110:180)')\n",
     "print(varArray.fDrawVarWidgets.children)"
@@ -107,21 +76,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15rc1"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
