--- a/RootInteractive/tutorial/bokehDraw/makePandaWidgets.ipynb
+++ b/RootInteractive/tutorial/bokehDraw/makePandaWidgets.ipynb
@@ -84,11 +84,13 @@
     "    [['A'], ['C-A'], {\"color\": \"red\", \"size\": 7, \"colorZvar\":\"C\"}],\n",
     "    [['A'], ['C+A', 'C-A']],\n",
     "    [['B'], ['C+B', 'C-B'],{\"color\": \"red\", \"size\": 7, \"colorZvar\":\"C\"}],\n",
-    "    [['D'], ['(A+B+C)*D'], {\"size\": 10}]\n",
+    "    [['D'], ['(A+B+C)*D'], {\"size\": 10}],\n",
+    "    ['table', {'include':'.*A.*'}]\n",
     "]\n",
     "figureLayout=[\n",
     "    [0,1,2, {'commonX':1,'y_visible':2,'plot_height':300}],\n",
     "    [3,{'plot_height':100}],\n",
+    "    [4,{'plot_height':50}],\n",
     "    {'plot_height':100,'sizing_mode':'scale_width'}\n",
     "]\n",
     "widgetArray=[\n",
