table options bug on StandAlone is fixed

--- a/RootInteractive/tutorial/bokehDraw/bokehTreeDrawSA.ipynb
+++ b/RootInteractive/tutorial/bokehDraw/bokehTreeDrawSA.ipynb
@@ -23,9 +23,6 @@
    "outputs": [],
    "source": [
     "from bokeh.io import output_notebook\n",
-    "from RootInteractive.Tools.aliTreePlayer import *\n",
-    "#from TTreeHnInteractive.TTreeHnBrowser import *\n",
-    "from RootInteractive.InteractiveDrawing.bokeh.bokehTools import *\n",
     "from RootInteractive.InteractiveDrawing.bokeh.bokehDrawSA import *\n",
     "output_notebook()\n",
     "p3 = figure(plot_width=700, plot_height=400, title=\"template\")"
@@ -143,7 +140,7 @@
     "figureArray= [\n",
     "    [['tailF'], ['slope','norm-1'], {\"color\": \"red\", \"size\": 2, \"colorZvar\":\"fraction\"}],\n",
     "    [['fraction'], ['slope','norm-1'], {\"color\": \"red\", \"size\": 2, \"colorZvar\":\"tailF\"}],\n",
-    "    ['table']\n",
+    "    ['table',{'exclude':'P0'}]\n",
     "]\n",
     "figureLayout: str = '((0,1),(2, x_visible=1),commonY=1, x_visible=1,y_visible=0,plot_height=250,plot_width=1000)'"
    ]
