--- a/RootInteractive/tutorial/bokehDraw/test_BokehClient.ipynb
+++ b/RootInteractive/tutorial/bokehDraw/test_BokehClient.ipynb
@@ -22,6 +22,7 @@
     "from bokeh.models import CustomJS, ColumnDataSource, Slider\n",
     "from RootInteractive.InteractiveDrawing.bokeh.bokehTools import *\n",
     "from RootInteractive.InteractiveDrawing.bokeh.bokehDraw import *\n",
+    "from bokeh.io import output_notebook\n",
     "output_notebook()\n"
    ]
   },
