global options for figureArray is implemented

--- a/RootInteractive/tutorial/bokehDraw/makePandaWidgets.ipynb
+++ b/RootInteractive/tutorial/bokehDraw/makePandaWidgets.ipynb
@@ -81,11 +81,12 @@
    "outputs": [],
    "source": [
     "figureArray = [\n",
-    "    [['A'], ['C-A'], {\"color\": \"red\", \"size\": 7, \"colorZvar\":\"C\"}],\n",
+    "    [['A'], ['C-A'], {\"color\": \"red\", \"colorZvar\":\"C\"}],\n",
     "    [['A'], ['C+A', 'C-A']],\n",
     "    [['B'], ['C+B', 'C-B'],{\"color\": \"red\", \"size\": 7, \"colorZvar\":\"C\"}],\n",
     "    [['D'], ['(A+B+C)*D'], {\"size\": 10}],\n",
-    "    ['table', {'include':'.*A.*'}]\n",
+    "    ['table', {'include':'.*A.*'}],\n",
+    "    {\"size\":10}\n",
     "]\n",
     "figureLayout=[\n",
     "    [0,1,2, {'commonX':1,'y_visible':2,'plot_height':300}],\n",
