LoadTree implementation draft (Seg.Fault)

--- a/RootInteractive/tutorial/bokehDraw/bokehTreeDraw.ipynb
+++ b/RootInteractive/tutorial/bokehDraw/bokehTreeDraw.ipynb
@@ -23,6 +23,7 @@
    "outputs": [],
    "source": [
     "from RootInteractive.InteractiveDrawing.bokeh.bokehDraw import *\n",
+    "from RootInteractive.Tools.aliTreePlayer import *\n",
     "from bokeh.io import output_notebook, show\n",
     "output_notebook()\n",
     "p3 = figure(plot_width=700, plot_height=400, title=\"template\")"
@@ -42,7 +43,7 @@
    "outputs": [],
    "source": [
     "ROOT.TFile.SetCacheFileDir(\"../data/\")\n",
-    "tree=ROOT.AliTreePlayer.LoadTrees(\"cat performance.list\",\"identFit\",\"xxx\",\".*\",\"\",\"\")\n",
+    "tree=LoadTrees(\"cat performance.list\",\"identFit\",\"xxx\",\".*\",0)\n",
     "tree.SetAlias(\"norm\",\"param.fElements[0]\")\n",
     "tree.SetAlias(\"slope\",\"param.fElements[1]\")\n",
     "tree.SetAlias(\"isMax\",\"name.String().Contains(\\\"PionMax\\\")==0\");\n",
