--- a/RootInteractive/TTreeHnInteractive/TTreeHNInteractiveV3.ipynb
+++ b/RootInteractive/TTreeHnInteractive/TTreeHNInteractiveV3.ipynb
@@ -8,9 +8,21 @@
    "source": [
     "from TTreeHnBrowser import *\n",
     "import matplotlib.pyplot as plt\n",
+    "from RootInteractive.Tools.aliTreePlayer import *\n",
     "%matplotlib inline\n",
     "output_notebook()\n",
     "#%matplotlib notebook"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "info = ROOT.AliExternalInfo()\n",
+    "info.fVerbose = 0\n",
+    "tree = info.GetTree(\"QA.TPC\", \"LHC15o\", \"cpass1_pass1\")"
    ]
   },
   {
@@ -47,13 +59,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tree=ROOT.AliTreePlayer.LoadTrees(\"cat performance.list\",\"(his.*)\",\"xxx\",\".*\",\"\",\"\")\n",
-    "ROOT.TStatToolkit.AddMetadata(tree,\"mptCenter.Slider\",\"(0:10:0.1)\")\n",
-    "ROOT.TStatToolkit.AddMetadata(tree,\"mptCenter.Hint\",\"1/pt (GeV/c)\")\n",
-    "ROOT.TStatToolkit.AddMetadata(tree,\"thetaCenter.Slider\",\"(-1:1:0.05)\")\n",
-    "ROOT.TStatToolkit.AddMetadata(tree,\"thetaCenter.Hint\",\"pz/pt\")\n",
-    "ROOT.TStatToolkit.AddMetadata(tree,\"deltaphiCenter.Slider\",\"(-1:1:0.1)\")\n",
-    "ROOT.TStatToolkit.AddMetadata(tree,\"deltaPhiCenter.Hint\",\"delta sector\")"
+    "tree, treeList, fileList = LoadTrees(\"cat performance.list\",\"(his.*)\",\"xxx\",\".*\",0)\n",
+    "AddMetadata(tree,\"mptCenter.Slider\",\"(0:10:0.1)\")\n",
+    "AddMetadata(tree,\"mptCenter.Hint\",\"1/pt (GeV/c)\")\n",
+    "AddMetadata(tree,\"thetaCenter.Slider\",\"(-1:1:0.05)\")\n",
+    "AddMetadata(tree,\"thetaCenter.Hint\",\"pz/pt\")\n",
+    "AddMetadata(tree,\"deltaphiCenter.Slider\",\"(-1:1:0.1)\")\n",
+    "AddMetadata(tree,\"deltaPhiCenter.Hint\",\"delta sector\")"
    ]
   },
   {
