--- a/RootInteractive/tutorial/TTreeHnInteractive/TTreeHNInteractiveV4.ipynb
+++ b/RootInteractive/tutorial/TTreeHnInteractive/TTreeHNInteractiveV4.ipynb
@@ -20,6 +20,7 @@
    "outputs": [],
    "source": [
     "from TTreeHnInteractive.TTreeHnBrowser import *\n",
+    "from RootInteractive.Tools.aliTreePlayer import *\n",
     "import matplotlib.pyplot as plt\n",
     "from InteractiveDrawing.bokeh.bokehDrawPanda import *\n",
     "#%matplotlib inline\n",
@@ -41,13 +42,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tree=ROOT.AliTreePlayer.LoadTrees(\"cat performance.list\",\"(his.*)\",\"xxx\",\".*\",\"\",\"\")\n",
-    "ROOT.TStatToolkit.AddMetadata(tree,\"mptCenter.Slider\",\"(0:10:0.1)\")\n",
-    "ROOT.TStatToolkit.AddMetadata(tree,\"mptCenter.Hint\",\"1/pt (GeV/c)\")\n",
-    "ROOT.TStatToolkit.AddMetadata(tree,\"thetaCenter.Slider\",\"(-1:1:0.05)\")\n",
-    "ROOT.TStatToolkit.AddMetadata(tree,\"thetaCenter.Hint\",\"pz/pt\")\n",
-    "ROOT.TStatToolkit.AddMetadata(tree,\"deltaphiCenter.Slider\",\"(-1:1:0.1)\")\n",
-    "ROOT.TStatToolkit.AddMetadata(tree,\"deltaPhiCenter.Hint\",\"delta sector\")"
+    "tree, treeList, file,List = LoadTrees(\"cat performance.list\",\"(his.*)\",\"xxx\",\".*\",0)\n",
+    "AddMetadata(tree,\"mptCenter.Slider\",\"(0:10:0.1)\")\n",
+    "AddMetadata(tree,\"mptCenter.Hint\",\"1/pt (GeV/c)\")\n",
+    "AddMetadata(tree,\"thetaCenter.Slider\",\"(-1:1:0.05)\")\n",
+    "AddMetadata(tree,\"thetaCenter.Hint\",\"pz/pt\")\n",
+    "AddMetadata(tree,\"deltaphiCenter.Slider\",\"(-1:1:0.1)\")\n",
+    "AddMetadata(tree,\"deltaPhiCenter.Hint\",\"delta sector\")"
    ]
   },
   {
@@ -127,14 +128,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15rc1"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
