--- a/RootInteractive/tutorial/bokehDraw/bokehTreeDrawSA.ipynb
+++ b/RootInteractive/tutorial/bokehDraw/bokehTreeDrawSA.ipynb
@@ -24,6 +24,7 @@
    "source": [
     "from bokeh.io import output_notebook\n",
     "from RootInteractive.InteractiveDrawing.bokeh.bokehDrawSA import *\n",
+    "from RootInteractive.Tools.aliTreePlayer import *\n",
     "output_notebook()\n",
     "p3 = figure(plot_width=700, plot_height=400, title=\"template\")"
    ]
@@ -42,7 +43,7 @@
    "outputs": [],
    "source": [
     "ROOT.TFile.SetCacheFileDir(\"../data/\")\n",
-    "tree=ROOT.AliTreePlayer.LoadTrees(\"cat performance.list\",\"identFit\",\"xxx\",\".*\",\"\",\"\")\n",
+    "tree, treeList, fileList = LoadTrees(\"cat performance.list\",\"identFit\",\"xxx\",\".*\",0)\n",
     "tree.SetAlias(\"norm\",\"param.fElements[0]\")\n",
     "tree.SetAlias(\"slope\",\"param.fElements[1]\")\n",
     "tree.SetAlias(\"isMax\",\"name.String().Contains(\\\"PionMax\\\")==0\");\n",
@@ -152,16 +153,6 @@
    "outputs": [],
    "source": [
     "fig=bokehDrawSA.fromArray(tree, \"tailF>=-1\", figureArray,widgets,tooltips=tooltips, layout=figureLayout)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import bokeh\n",
-    "bokeh.models.widgets.groups.CheckboxGroup?"
    ]
   }
  ],
