--- a/RootInteractive/tutorial/distortionCase/pandaTools/distortionDraw.ipynb
+++ b/RootInteractive/tutorial/distortionCase/pandaTools/distortionDraw.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from Tools.aliTreePlayer import *\n",
+    "from RootInteractive.Tools.aliTreePlayer import *\n",
     "from TTreeHnInteractive.TTreeHnBrowser import *\n",
     "from InteractiveDrawing.bokeh.bokehTools import *\n",
     "from InteractiveDrawing.bokeh.bokehDrawPanda import *\n",
@@ -38,7 +38,7 @@
    "outputs": [],
    "source": [
     "ROOT.TFile.SetCacheFileDir(\"../../data/\")\n",
-    "tree=ROOT.AliTreePlayer.LoadTrees(\"cat performancehttp.list\",\"distortion\",\"xxx\",\".*\",\"\",\"\")"
+    "tree, treeList, fileList = LoadTrees(\"cat performancehttp.list\",\"distortion\",\"xxx\",\".*\",0)"
    ]
   },
   {
