--- a/RootInteractive/tutorial/bokehDraw/bokehTreeDraw.ipynb
+++ b/RootInteractive/tutorial/bokehDraw/bokehTreeDraw.ipynb
@@ -43,16 +43,16 @@
    "outputs": [],
    "source": [
     "ROOT.TFile.SetCacheFileDir(\"../data/\")\n",
-    "tree=LoadTrees(\"cat performance.list\",\"identFit\",\"xxx\",\".*\",0)\n",
+    "tree, treeList,fileList = LoadTrees(\"cat performance.list\",\"identFit\",\"xxx\",\".*\",0)\n",
     "tree.SetAlias(\"norm\",\"param.fElements[0]\")\n",
     "tree.SetAlias(\"slope\",\"param.fElements[1]\")\n",
-    "tree.SetAlias(\"isMax\",\"name.String().Contains(\\\"PionMax\\\")==0\");\n",
-    "tree.SetAlias(\"isTot\",\"name.String().Contains(\\\"PionTot\\\")==0&&name.String().Contains(\\\"PionMaxTot\\\")==0\");\n",
-    "tree.SetAlias(\"isMaxTot\",\"name.String().Contains(\\\"PionMaxTot\\\")>0\");\n",
-    "tree.SetAlias(\"P0\",\"name.String().Contains(\\\"P0\\\")>0\");\n",
-    "tree.SetAlias(\"P1\",\"name.String().Contains(\\\"P1\\\")>0\");\n",
-    "tree.SetAlias(\"PA\",\"name.String().Contains(\\\"PA\\\")>0\");\n",
-    "tree.SetAlias(\"MB\",\"name.String().Contains(\\\"MB\\\")>0\");"
+    "tree.SetAlias(\"isMax\",\"name.String().Contains(\\\"PionMax\\\")==0\")\n",
+    "tree.SetAlias(\"isTot\",\"name.String().Contains(\\\"PionTot\\\")==0&&name.String().Contains(\\\"PionMaxTot\\\")==0\")\n",
+    "tree.SetAlias(\"isMaxTot\",\"name.String().Contains(\\\"PionMaxTot\\\")>0\")\n",
+    "tree.SetAlias(\"P0\",\"name.String().Contains(\\\"P0\\\")>0\")\n",
+    "tree.SetAlias(\"P1\",\"name.String().Contains(\\\"P1\\\")>0\")\n",
+    "tree.SetAlias(\"PA\",\"name.String().Contains(\\\"PA\\\")>0\")\n",
+    "tree.SetAlias(\"MB\",\"name.String().Contains(\\\"MB\\\")>0\")"
    ]
   },
   {
